@@ -74,7 +74,6 @@ import java.util.stream.Stream;
 import jenkins.model.Jenkins;
 import jenkins.model.JenkinsLocationConfiguration;
 import jenkins.slaves.iterators.api.NodeIterator;
-import org.apache.commons.lang.StringUtils;
 import org.kohsuke.accmod.Restricted;
 import org.kohsuke.accmod.restrictions.NoExternalUse;
 import org.kohsuke.stapler.DataBoundConstructor;
@@ -349,7 +348,9 @@ public class SlaveTemplate implements Describable<SlaveTemplate> {
             Boolean metadataSupported,
             Boolean enclaveEnabled) {
 
-        if (StringUtils.isNotBlank(remoteAdmin) || StringUtils.isNotBlank(jvmopts) || StringUtils.isNotBlank(tmpDir)) {
+        if ((remoteAdmin != null && !remoteAdmin.isBlank())
+                || (jvmopts != null && !jvmopts.isBlank())
+                || (tmpDir != null && !tmpDir.isBlank())) {
             LOGGER.log(
                     Level.FINE,
                     "As remoteAdmin, jvmopts or tmpDir is not blank, we must ensure the user has ADMINISTER rights.");
@@ -374,11 +375,11 @@ public class SlaveTemplate implements Describable<SlaveTemplate> {
         this.description = description;
         this.initScript = initScript;
         this.tmpDir = tmpDir;
-        this.userData = StringUtils.trimToEmpty(userData);
+        this.userData = userData == null ? "" : userData.trim();
         this.numExecutors = Util.fixNull(numExecutors).trim();
         this.remoteAdmin = remoteAdmin;
 
-        if (StringUtils.isNotBlank(javaPath)) {
+        if (javaPath != null && !javaPath.isBlank()) {
             this.javaPath = javaPath;
         } else {
             this.javaPath = EC2AbstractSlave.DEFAULT_JAVA_PATH;
@@ -1714,7 +1715,7 @@ public class SlaveTemplate implements Describable<SlaveTemplate> {
     }
 
     public String chooseSubnetId() {
-        if (StringUtils.isBlank(subnetId)) {
+        if (subnetId == null || subnetId.isBlank()) {
             return null;
         } else {
             String[] subnetIdList = getSubnetId().split(EC2_RESOURCE_ID_DELIMETERS);
@@ -2136,9 +2137,10 @@ public class SlaveTemplate implements Describable<SlaveTemplate> {
     }
 
     private boolean isSameIamInstanceProfile(Instance instance) {
-        return StringUtils.isBlank(getIamInstanceProfile())
+        String iamProfile = getIamInstanceProfile();
+        return (iamProfile == null || iamProfile.isBlank())
                 || (instance.iamInstanceProfile() != null
-                        && instance.iamInstanceProfile().arn().equals(getIamInstanceProfile()));
+                        && instance.iamInstanceProfile().arn().equals(iamProfile));
     }
 
     private boolean isTerminatingOrShuttindDown(InstanceStateName instanceStateName) {
@@ -2207,13 +2209,14 @@ public class SlaveTemplate implements Describable<SlaveTemplate> {
                 .build());
 
         Placement.Builder placementBuilder = Placement.builder();
-        if (StringUtils.isNotBlank(getZone())) {
+        String zone = getZone();
+        if (zone != null && !zone.isBlank()) {
             if (getTenancyAttribute().equals(Tenancy.Dedicated)) {
                 placementBuilder.tenancy("dedicated");
             }
             riRequestBuilder.placement(placementBuilder.build());
             diFilters.add(
-                    Filter.builder().name("availability-zone").values(getZone()).build());
+                    Filter.builder().name("availability-zone").values(zone).build());
         }
 
         if (getTenancyAttribute().equals(Tenancy.Host)) {
@@ -2238,7 +2241,7 @@ public class SlaveTemplate implements Describable<SlaveTemplate> {
         LOGGER.log(Level.FINE, () -> String.format("Chose subnetId %s", subnetId));
 
         InstanceNetworkInterfaceSpecification.Builder netBuilder = InstanceNetworkInterfaceSpecification.builder();
-        if (StringUtils.isNotBlank(subnetId)) {
+        if (subnetId != null && !subnetId.isBlank()) {
             netBuilder.subnetId(subnetId);
 
             diFilters.add(Filter.builder().name("subnet-id").values(subnetId).build());
@@ -2295,10 +2298,10 @@ public class SlaveTemplate implements Describable<SlaveTemplate> {
                     .build());
         }
 
-        if (StringUtils.isNotBlank(getIamInstanceProfile())) {
-            riRequestBuilder.iamInstanceProfile(IamInstanceProfileSpecification.builder()
-                    .arn(getIamInstanceProfile())
-                    .build());
+        String iamProfile = getIamInstanceProfile();
+        if (iamProfile != null && !iamProfile.isBlank()) {
+            riRequestBuilder.iamInstanceProfile(
+                    IamInstanceProfileSpecification.builder().arn(iamProfile).build());
         }
 
         List<TagSpecification> tagList = new ArrayList<>();
@@ -2657,7 +2660,7 @@ public class SlaveTemplate implements Describable<SlaveTemplate> {
     }
 
     private void setupCustomDeviceMapping(List<BlockDeviceMapping> deviceMappings) {
-        if (StringUtils.isNotBlank(customDeviceMapping)) {
+        if (customDeviceMapping != null && !customDeviceMapping.isBlank()) {
             deviceMappings.addAll(DeviceMappingParser.parse(customDeviceMapping));
         }
     }
@@ -2700,16 +2703,17 @@ public class SlaveTemplate implements Describable<SlaveTemplate> {
             launchSpecificationBuilder.monitoring(
                     RunInstancesMonitoringEnabled.builder().enabled(monitoring).build());
 
-            if (StringUtils.isNotBlank(getZone())) {
+            String zone = getZone();
+            if (zone != null && !zone.isBlank()) {
                 SpotPlacement placement =
-                        SpotPlacement.builder().availabilityZone(getZone()).build();
+                        SpotPlacement.builder().availabilityZone(zone).build();
                 launchSpecificationBuilder.placement(placement);
             }
 
             InstanceNetworkInterfaceSpecification.Builder netBuilder = InstanceNetworkInterfaceSpecification.builder();
             String subnetId = chooseSubnetId();
             LOGGER.log(Level.FINE, () -> String.format("Chose subnetId %s", subnetId));
-            if (StringUtils.isNotBlank(subnetId)) {
+            if (subnetId != null && !subnetId.isBlank()) {
                 netBuilder.subnetId(subnetId);
 
                 /*
@@ -2754,9 +2758,10 @@ public class SlaveTemplate implements Describable<SlaveTemplate> {
 
             HashSet<Tag> instTags = buildTags(EC2Cloud.EC2_SLAVE_TYPE_SPOT);
 
-            if (StringUtils.isNotBlank(getIamInstanceProfile())) {
+            String iamProfile = getIamInstanceProfile();
+            if (iamProfile != null && !iamProfile.isBlank()) {
                 launchSpecificationBuilder.iamInstanceProfile(IamInstanceProfileSpecification.builder()
-                        .arn(getIamInstanceProfile())
+                        .arn(iamProfile)
                         .build());
             }
 
@@ -2767,6 +2772,13 @@ public class SlaveTemplate implements Describable<SlaveTemplate> {
             if (getSpotBlockReservationDuration() != 0) {
                 spotRequestBuilder.blockDurationMinutes(getSpotBlockReservationDuration() * 60);
             }
+
+            List<TagSpecification> tagList = new ArrayList<>();
+            tagList.add(TagSpecification.builder()
+                    .tags(instTags)
+                    .resourceType(ResourceType.SPOT_INSTANCES_REQUEST)
+                    .build());
+            spotRequestBuilder.tagSpecifications(tagList);
 
             RequestSpotInstancesResponse reqResult;
             try {
@@ -2836,6 +2848,12 @@ public class SlaveTemplate implements Describable<SlaveTemplate> {
                 SpotInstanceRequest.Builder spotInstReqBuilder = spotInstReq.toBuilder();
                 spotInstReqBuilder.tags(instTags);
 
+                // If the spot request is already fulfilled with an instance ID, tag the instance immediately
+                if (spotInstReq.instanceId() != null
+                        && !spotInstReq.instanceId().isBlank()) {
+                    tagSpotInstance(ec2, spotInstReq.instanceId(), instTags);
+                }
+
                 LOGGER.info("Spot instance id in provision: " + spotInstReq.spotInstanceRequestId());
 
                 slaves.add(newSpotSlave(spotInstReqBuilder.build()));
@@ -2860,7 +2878,7 @@ public class SlaveTemplate implements Describable<SlaveTemplate> {
         if (useEphemeralDevices) {
             newMappings.addAll(getNewEphemeralDeviceMapping(image));
         } else {
-            if (StringUtils.isNotBlank(customDeviceMapping)) {
+            if (customDeviceMapping != null && !customDeviceMapping.isBlank()) {
                 newMappings.addAll(DeviceMappingParser.parse(customDeviceMapping));
             }
         }
@@ -2874,10 +2892,10 @@ public class SlaveTemplate implements Describable<SlaveTemplate> {
         if (tags != null && !tags.isEmpty()) {
             for (EC2Tag t : tags) {
                 instTags.add(Tag.builder().key(t.getName()).value(t.getValue()).build());
-                if (StringUtils.equals(t.getName(), EC2Tag.TAG_NAME_JENKINS_SLAVE_TYPE)) {
+                if (Objects.equals(t.getName(), EC2Tag.TAG_NAME_JENKINS_SLAVE_TYPE)) {
                     hasCustomTypeTag = true;
                 }
-                if (StringUtils.equals(t.getName(), EC2Tag.TAG_NAME_JENKINS_SERVER_URL)) {
+                if (Objects.equals(t.getName(), EC2Tag.TAG_NAME_JENKINS_SERVER_URL)) {
                     hasJenkinsServerUrlTag = true;
                 }
             }
@@ -2896,7 +2914,7 @@ public class SlaveTemplate implements Describable<SlaveTemplate> {
                     .build());
         }
 
-        if (parent != null && StringUtils.isNotBlank(parent.name)) {
+        if (parent != null && parent.name != null && !parent.name.isBlank()) {
             instTags.add(Tag.builder()
                     .key(EC2Tag.TAG_NAME_JENKINS_CLOUD_NAME)
                     .value(parent.name)
@@ -3014,6 +3032,33 @@ public class SlaveTemplate implements Describable<SlaveTemplate> {
                 }
                 LOGGER.log(Level.SEVERE, e.awsErrorDetails().errorMessage(), e);
             }
+        }
+    }
+
+    /**
+     * Tag a spot instance and its volumes immediately when the instance ID becomes available.
+     * This ensures tags are applied at instance creation time rather than waiting for connection.
+     *
+     * @param ec2
+     * @param instanceId
+     * @param instTags
+     */
+    private void tagSpotInstance(Ec2Client ec2, String instanceId, Collection<Tag> instTags) {
+        try {
+            LOGGER.info("Tagging spot instance " + instanceId + " at creation time");
+            List<String> resources = new ArrayList<>();
+            resources.add(instanceId);
+
+            ec2.createTags(CreateTagsRequest.builder()
+                    .resources(resources)
+                    .tags(instTags)
+                    .build());
+        } catch (AwsServiceException e) {
+            LOGGER.log(
+                    Level.WARNING,
+                    "Failed to tag spot instance " + instanceId + " at creation: "
+                            + e.awsErrorDetails().errorMessage(),
+                    e);
         }
     }
 
@@ -3175,7 +3220,7 @@ public class SlaveTemplate implements Describable<SlaveTemplate> {
         if (metadataHopsLimit == null) {
             metadataHopsLimit = EC2AbstractSlave.DEFAULT_METADATA_HOPS_LIMIT;
         }
-        if (StringUtils.isBlank(javaPath)) {
+        if (javaPath == null || javaPath.isBlank()) {
             javaPath = EC2AbstractSlave.DEFAULT_JAVA_PATH;
         }
         if (enclaveEnabled == null) {
