@@ -41,12 +41,12 @@ import java.util.Base64;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.TimeUnit;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import jenkins.model.Jenkins;
-import org.apache.commons.lang.StringUtils;
 import org.apache.sshd.client.SshClient;
 import org.apache.sshd.client.channel.ChannelExec;
 import org.apache.sshd.client.future.ConnectFuture;
@@ -353,7 +353,7 @@ public abstract class EC2SSHLauncher extends EC2ComputerLauncher {
                     throw new IOException("goto sleep");
                 }
 
-                if (StringUtils.isBlank(host)) {
+                if (host == null || host.isBlank()) {
                     logWarning(computer, listener, "Empty host, your host is most likely waiting for an ip address.");
                     throw new IOException("goto sleep");
                 }
@@ -404,8 +404,8 @@ public abstract class EC2SSHLauncher extends EC2ComputerLauncher {
                 logInfo(computer, listener, "Failed to connect via ssh: " + e.getMessage());
 
                 if (computer.isOffline()
-                        && StringUtils.isNotBlank(computer.getOfflineCauseReason())
-                        && computer.getOfflineCauseReason().equals(Messages.OfflineCause_SSHKeyCheckFailed())) {
+                        && Objects.equals(
+                                computer.getOfflineCauseReason(), Messages.OfflineCause_SSHKeyCheckFailed())) {
                     throw SdkException.create(
                             "The connection couldn't be established and the computer is now offline", e);
                 } else {
